syntax = "proto3";

package account;

import "google/protobuf/empty.proto";

option java_package = "com.blog.account.proto";
option java_multiple_files = true;

service AccountService {
  rpc ListRole(google.protobuf.Empty) returns (ListRoleResponse) {};
}

message RoleResponse {
  int64 role_id = 1;
  string role = 2;
  string description = 3;
}

message AccountGrpcError {
  string code = 1;
  string message = 2;
  map<string, string> errors = 3;
  string exception = 4;
  bool is_client_error = 5;
}

message ListRoleResponse {
  message Data {
    repeated RoleResponse roles = 1;
  }

  bool success = 1;
  oneof response {
    Data data = 2;
    AccountGrpcError error = 3;
  }
}